[tool.poetry]
name = "airbnb-backend"
version = "0.1.0"
description = ""
authors = ["RyuMinSu <sonicsu94@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "airbnb_backend"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.3"
pillow = "^10.0.0"
djangorestframework = "^3.14.0"
pyjwt = "^2.8.0"
django-environ = "^0.11.1"
django-cors-headers = "^4.2.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
